@@ -1,8 +1,6 @@
 INCLUDES =	\
         -DGNOMELOCALEDIR=\""$(datadir)/locale"\"        \
-	-I$(srcdir) -I$(top_srcdir) 			\
-	-I. -I$(top_srcdir)/bonobo			\
-        -I$(includedir)                                 \
+	-I$(top_srcdir) 				\
 	$(BONOBOUI_CFLAGS)
 
 bin_PROGRAMS = sample-container
